<resources>
    <string name="app_name">SmartManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="smart_manager">Smart Manager</string>
    <string name="welcome1">Welcome Back</string>
    <string name="welcome2">We missed you! Log in to get started</string>
    <string name="login">LOGIN</string>
    <string name="email_suggestion">someone@gmail.com</string>
    <string name="password_suggestion">password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="help">Need help?</string>
    <string name="sign_in">Sign in</string>
    <string name="register1">Don\'t have an account?</string>
    <string name="register2">register instead</string>

    <string name="hello">Hello</string>
    <string name="getStarted">Register to get started!</string>
    <string name="register3">REGISTER</string>
    <string name="repeat_password_suggestion">repeat password</string>
    <string name="username">username</string>
    <string name="register">Create account</string>
    <string name="google_register">Log in with google</string>
    <string name="login1">Already have an account?</string>
    <string name="login2">Log in instead</string>
    <string name="time">Time</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">pick date</string>

    <string name="activity_listView_row_date">Activity Date</string>
    <string name="activity_listView_row_time">Activity Start Time</string>
    <string name="activity_listView_row_description">Activity Description</string>
    <string name="activity_listView_row_name">Activity Name</string>
    <string name="activity_listView_row_color">Activity Color</string>
    <string name="activity_listView_row_reminder">Activity Reminder</string>
    <string name="add_activity">Add</string>

    <string-array name="color_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="reminder_active">Reminder active</string>
    <string name="reminder_inactive">Reminder inactive</string>

    <string name="are_you_sure">Are you sure you want to delete this item</string>
    <string name="questionMark">" ?"</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="name">name</string>
    <string name="description">description</string>
    <string name="little_time">time</string>
    <string name="date">date</string>
    <string name="color">color</string>
    <string name="reminder">Reminder</string>
    <string name="completed">Completed</string>
    <string name="update">Update</string>
    <string name="statistics">Statistics</string>
    <string name="add_a_new_activity">Add a new Activity</string>
    <string name="textview" />
    <string name="lorem_ipsum" />

    <string name="no_activities">You have no activities today</string>
    <string name="reminderDetail">"Reminder   "</string>
    <string name="completedDetail">"Completed   "</string>
    <string name="daily">Daily</string>
    <string name="priority">Priority:</string>
    <string name="spinnerColor">Color:</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="no_priority">No priority Selected</string>
    <string name="filter_by_color">Filter by color</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="order_by_priority">Order By Priority:</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="edit">Edit</string>
    <string name="name_add_Activity">Name</string>
    <string name="description_add_activity">Description</string>
    <string name="date_add_activity">"Date: "</string>
    <string name="time_add_activity">Time:</string>
    <string name="reminder_add_activity">Reminder</string>
    <string name="back">Back</string>
    <string name="link">Link</string>

</resources>