<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailLogin"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.NoActionBar">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/smart_manager"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/getStarted"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:elevation="36dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/register3"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/register_username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:height="52dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:autofillHints="hint" />

            <EditText
                android:id="@+id/register_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:height="52dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email_suggestion"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:autofillHints="hint" />

            <EditText
                android:id="@+id/register_password1_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:height="52dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password_suggestion"
                android:inputType="textVisiblePassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:autofillHints="hint" />

            <EditText
                android:id="@+id/register_password2_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:height="52dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/repeat_password_suggestion"
                android:inputType="textVisiblePassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:autofillHints="hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textColor="@color/white" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp">

                <Button
                    android:id="@+id/google_register_btn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:text="@string/google_register"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_register_txt"
            android:layout_marginStart="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/login2"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>